main.css
body * {
  vertical-align: top;
}

body {
  margin: 0px;
  padding: 0px;
  font-family: 'Didact Gothic', sans-serif;
  letter-spacing: 1;
}

a {
  text-decoration: none;
  font-size: 12px;
  color: rgb(48, 129, 174);
}



.container {
  position: relative;
  width: 962px;
  margin: 0px auto;
/*  border: 1px solid lime;*/
}

.container div {
  display: inline-block;
}

.button {
  border-radius: 6px;
  text-align: center;
  vertical-align: middle;
  box-shadow: 0px 1px 3px 0px;
  color: white; /**/
  background: maroon; /**/
}

.button * {
  margin: 0px;
  vertical-align: middle;
  display: inline-block;
}

.subtext {
  font-size: 12px;
  padding: 10px;
  color: rgb(120, 120, 120);
}

.column div{
  display: block;
}


.caption *, .caption div {
  display: inline-block;
  vertical-align: middle;
}

.caption > .timer {
  position: absolute;
  right: 10px;
}

.nav {
  margin: 0px 35px 0px 0px;
  height: 60px;
  padding: 0px;
  line-height: 55px;
}

.profile-menu {
  position: absolute;
  right: 10;
  height: 60px;
  line-height: 55px;
}

img.profile-menu-image {
  height: 50px;
  border-radius: 50px;
  box-shadow: 0px 0px 8px 0px rgb(29, 29, 29);
  margin-right: 5px;
}

img.downarrow {
  margin-top: -1px;
  margin-right: 1px;
  margin-left: 5px;
}

body .pageheader {
  height: 60px;
  background-color: black;
  background-image: url("images/headerbackground.png"); 
  color: white;
  font-size: 17px;
  text-shadow: 0 1px black,
               -1px 0 gray;
}

.pageheader > .container * {
  vertical-align: middle;
}

.pageheader .logo {
  margin: -2px 41px 0 0px;
}

.subheader {
  height: 87px;
}

.subheader > .container *{
  margin-left: 2px;
  line-height: 87px;
  vertical-align: middle;
  display: inline-block;
  font-size: 29px;
}

.subheader > .container {

}

.feature {
  background: rgb(242, 240, 236);
  box-shadow: inset 1px 0px 3px 0px rgb(185, 185, 185);
  padding-top: 30px;
}

.feature-main {
  width: 620px;
  margin: 0 10 0 0px;
}

.feature-main > .caption {
  background-color: rgba(0, 0, 0, 0.65);
  color: white;
  position: absolute;
  width: 620px;
  height: 56px;
}

.feature-main .caption > * {
  margin: 0 20px;
}

.feature-main .caption .timer {
  height: 56px;
  line-height: 56px;
}

.timer img {
  margin-top: -4px;
}

span.caption-text {
  height: 56px;
  line-height: 56px;
  font-size: 24px;
}

.feature-main-img {
  width: 620px;
  height: 400px;
} 

.feature-main-img img {
  width: 620px;
  height: 400px;
}

.feature-main-img-footer {
  height: 63px;
  width: 620px;
  font-size: 18px;
  font-style: oblique;
  background-color: rgb(208, 205, 199);
  vertical-align: middle;
  padding-top: 20px;
}

.feature-main-img-footer span {
  display: block;
  vertical-align: middle;
  width: 590px;
  margin: 0 auto;
  color: rgb(65, 65, 65);
}

.feature-main > .subtext {
  padding: 8px 20px 31px;
  width: 550px;
  font-size: 10px;
}

.feature-side {
  width: 300px;
  margin: 0 0 0 5px;
}


div.mobber-count {
  width: 139px;
  display: inline-block;
  text-align: center;
  vertical-align: middle;
}

div.mobber-needed-count {
  width: 139px;
  display: inline-block;
  margin-left: 17px;
  text-align: center;
  vertical-align: middle;
}

.mobber-count-top {
  height: 118px;
  background-color: rgb(208, 205, 199);
  color: white;
  text-shadow: 0px 1px rgb(153, 153, 153),
               0px -1px rgb(250, 250, 249);
  font-size: 75px;
  line-height: 118px;
}

.mobber-count-top * {
  margin: 25px 0px 0px 0px;
}

.mobber-count-bottom {
  height: 33px;
  line-height: 33px;
  background-color: rgb(181, 174, 163);
  text-shadow: 0px 1px rgb(217, 214, 208);
  font-size: 15px;
  color: rgb(65, 65, 65);
}

.mobber-count-bottom * {
  margin: -3px 0px 0px 0px;
}

.join {
  font-size: 25px;
  text-shadow: 0 1px rgb(165, 108, 30);
  height: 60px;
  margin-top: 25px;
  margin-bottom: -5px;
  z-index: 20;
  position: relative;
  box-shadow: inset 0px 1px 1px -1px rgb(255, 255, 255),
                    0px 1px 7px -2px rgb(131, 131, 131);
}

div .button.orange-button {
  color: white;
  background: rgb(253,217,51); /* Old browsers */
  background: -moz-linear-gradient(top, rgb(253,217,51) 0%, rgb(227,166,45) 100%); /* FF3.6+ */
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgb(253,217,51)), color-stop(100%,rgb(227,166,45))); /* Chrome,Safari4+ */
  background: -webkit-linear-gradient(top, rgb(253,217,51) 0%,rgb(227,166,45) 100%); /* Chrome10+,Safari5.1+ */
  background: -o-linear-gradient(top, rgb(253,217,51) 0%,rgb(227,166,45) 100%); /* Opera 11.10+ */
  background: -ms-linear-gradient(top, rgb(253,217,51) 0%,rgb(227,166,45) 100%); /* IE10+ */
  background: linear-gradient(to bottom, rgb(253,217,51) 0%,rgb(227,166,45) 100%); /* W3C */
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fdd933', endColorstr='#e3a62d',GradientType=0 ); /* IE6-9 */
  border: 1px solid rgb(207, 156, 29);
}

.join * {
  height: 60px;
  line-height: 60px;
}


.reward {
  display: block;
  height: 79px;
  width: 288;
  margin: 0 auto;
  background-color: white;
  border-radius: 0px 0px 6px 6px;
  box-shadow: inset 0px -4px 0px -1px rgb(230, 230, 230);
  color: black;
  border: 1px solid rgb(177, 177, 177);
  position: relative;
  
}

.reward img {
  position: relative;
  width: 40px;
  height: 54px;
  float: left;
  margin: 8px;
  margin-top: 13px;
}

.reward .subtext {
  font-size: 13px;
  padding: 0px;
  margin-top: 0px;
  color: rgb(65, 65, 65);
}

.reward-text {
  padding-top: 16px;
  font-size: 18px;
  color: rgb(65, 65, 65);
}

.reward-text span {
  display: block;
  margin: 0px;
}

.feature-side > .subtext {
  height: 38px;
  font-size: 11px;
  line-height: 15px;
  text-align: center;
  border-bottom: 1px solid rgb(177, 177, 177);
}

.share-buttons {
  margin-top: 18px;
}

.share-buttons > * {
  display: inline-block;
  line-height: 24px;
}

.share-buttons .tweet {
  width: 55px;
  height: 24px;
}
.share-buttons .share {
  width: 57px;
  height: 24px;
}
/* ... */

